Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerObjectField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        Object var
        return var
    end
end